[package]
name = "axum-with-tonic"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.18"
http = "0.2.9"
hyper = "0.14.26"
prost = "0.11.9"
serde = { version = "1.0.160", features = ["derive"] }
tokio = { version = "1.28.0", features = ["full"] }
tonic = "0.9.2"
tower = { version = "0.4.13", features = ["steer"] }
utoipa = { version = "3.3.0", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "3.1.3", features = ["axum"] }

[build-dependencies]
tonic-build = { version = "0.9.2", features = ["prost"] }
